# cognito-streamlit

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
k8s/: deployment.yaml  service.yaml
