[tool.poetry]
name = "cognito-streamlit"
version = "0.1.0"
description = ""
authors = ["jimshih <jim732883@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.35.59"
streamlit = "^1.40.1"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
